Build
-----

- Issue #3928: os.mknod() now available in Solaris, also.

- Issue #8175: --with-universal-archs=all works correctly on OSX 10.5

- Issue #6716: Quote -x arguments of compileall in MSI installer.

- Issue #1628484: The Makefile doesn't ignore the CFLAGS environment
  variable anymore.  It also forwards the LDFLAGS settings to the linker
  when building a shared library.

Tests
-----

- Issue #7027: regrtest.py keeps a reference to the encodings.ascii module as a
  workaround to #7140 bug

- Issue #3864: Skip three test_signal tests on freebsd6 because they fail
  if any thread was previously started, most likely due to a platform bug.

- Issue #8193: Fix test_zlib failure with zlib 1.2.4.


What's New in Python 2.6.5?
===========================

*Release date: 2010-03-18*


What's New in Python 2.6.5 rc 2?
================================

*Release date: 2010-03-09*

Core and Builtins
-----------------

- Issue #8089: a OS X framework build with --with-universal-archs=3-way|intel
  had no way to select a 32-bit executable.

- Issue #8084: fixes build issues on OSX 10.6 when targetting OSX 10.4.

Library
-------

- Reverting the changes made in r78432. Discussed in the tracker issue #7540.

- Issue #8107: Fixed test_distutils so it doesn't crash when the source 
  directory cannot be found.

Extension Modules
-----------------

- Issue #7670: sqlite3: Fixed crashes when operating on closed connections.

- Issue #8053: logic was inverted on which platforms to run a test on.
  caused test_thread to fail on Windows.


What's New in Python 2.6.5 rc 1?
================================

*Release date: 2010-03-01*

Core and Builtins
-----------------

- Issue #7309: Fix unchecked attribute access when converting
  UnicodeEncodeError, UnicodeDecodeError, and UnicodeTranslateError to
  strings.

- Issue #7649: "u'%c' % char" now behaves like "u'%s' % char" and raises a
  UnicodeDecodeError if 'char' is a byte string that can't be decoded using